fix(ui5-panel): add css for compact to align

--- a/packages/main/src/themes/Panel.css
+++ b/packages/main/src/themes/Panel.css
@@ -103,7 +103,7 @@
 	align-items: center;
 	flex-shrink: 0;
 	width: var(--_ui5_panel_button_root_width);
-	height: var(--_ui5_panel_button_root_width);
+	min-height: inherit;
 	padding: var(--_ui5_panel_header_button_wrapper_padding);
 	box-sizing: border-box;
 }
@@ -127,7 +127,7 @@
 	justify-content: center;
 	align-items: center;
 	min-width: initial;
-	height: 100%;
+	min-height: 100%;
 	width: 100%;
 }
 
